hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_clone@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private void @_hl.main.1() {
alloca_block:
  %"7_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca { i64*, i64 }, align 8
  %"9_0" = alloca { i64*, i64 }, align 8
  %"9_1" = alloca { i64*, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 2, i64* %"7_0", align 4
  store i64 1, i64* %"5_0", align 4
  %"5_01" = load i64, i64* %"5_0", align 4
  %"7_02" = load i64, i64* %"7_0", align 4
  %0 = call i8* @malloc(i64 mul (i64 ptrtoint (i64* getelementptr (i64, i64* null, i32 1) to i64), i64 2))
  %1 = bitcast i8* %0 to i64*
  %2 = insertvalue { i64*, i64 } poison, i64* %1, 0
  %3 = insertvalue { i64*, i64 } %2, i64 0, 1
  %4 = getelementptr inbounds i64, i64* %1, i64 0
  store i64 %"5_01", i64* %4, align 4
  %5 = getelementptr inbounds i64, i64* %1, i64 1
  store i64 %"7_02", i64* %5, align 4
  store { i64*, i64 } %3, { i64*, i64 }* %"8_0", align 8
  %"8_03" = load { i64*, i64 }, { i64*, i64 }* %"8_0", align 8
  %array_ptr = extractvalue { i64*, i64 } %"8_03", 0
  %array_offset = extractvalue { i64*, i64 } %"8_03", 1
  %6 = call i8* @malloc(i64 mul (i64 ptrtoint (i64* getelementptr (i64, i64* null, i32 1) to i64), i64 2))
  %7 = bitcast i8* %6 to i64*
  %8 = insertvalue { i64*, i64 } poison, i64* %7, 0
  %9 = insertvalue { i64*, i64 } %8, i64 0, 1
  %10 = getelementptr inbounds i64, i64* %array_ptr, i64 %array_offset
  call void @llvm.memcpy.p0i64.p0i64.i64(i64* %7, i64* %10, i64 mul (i64 ptrtoint (i64* getelementptr (i64, i64* null, i32 1) to i64), i64 2), i1 false)
  store { i64*, i64 } %"8_03", { i64*, i64 }* %"9_0", align 8
  store { i64*, i64 } %9, { i64*, i64 }* %"9_1", align 8
  %"9_14" = load { i64*, i64 }, { i64*, i64 }* %"9_1", align 8
  %array_ptr5 = extractvalue { i64*, i64 } %"9_14", 0
  %11 = bitcast i64* %array_ptr5 to i8*
  call void @free(i8* %11)
  %"9_06" = load { i64*, i64 }, { i64*, i64 }* %"9_0", align 8
  %array_ptr7 = extractvalue { i64*, i64 } %"9_06", 0
  %12 = bitcast i64* %array_ptr7 to i8*
  call void @free(i8* %12)
  ret void
}

; Function Attrs: nobuiltin
declare i8* @malloc(i64) #0

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i64.p0i64.i64(i64* noalias nocapture writeonly, i64* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: nobuiltin
declare void @free(i8*) #0

attributes #0 = { nobuiltin }
attributes #1 = { argmemonly nofree nounwind willreturn }
